# snacks

./: Cargo.toml  README.md  default.nix  flake.nix
src/: config.rs  main.rs
src/monitor/: mod.rs  mpris.rs  pipewire.rs
update/: Cargo.toml
update/src/: lib.rs
update_derive/: Cargo.toml
update_derive/src/: lib.rs
