[package]
name = "snacks"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3.31"
pipewire = "0.8.0"
# sctk = { version = "0.19.2", package = "smithay-client-toolkit" }
serde = "1.0.218"
tokio = { version = "1.43.0", features = ["full"] }
toml = "0.8.20"
zbus = "5.5.0"

[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic.git"
default-features = false
features = ["debug", "tokio", "winit", "wgpu"]
# features = ["a11y", "debug", "tokio", "wayland", "multi-window", "wgpu"]
