[package]
name = "snacks"
version = "0.1.0"
edition = "2024"

[workspace]
members = ["update", "update_derive"]

[dependencies]
pipewire = "0.8.0"
serde = "1.0.218"
tokio = { version = "1.43.0", features = ["full"] }
toml = "0.8.20"
update = { path = "./update" }
zbus = "5.5.0"

[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic.git"
default-features = false
features = ["debug", "multi-window", "tokio", "wayland", "wgpu", "winit"]
# features = ["a11y", "debug", "tokio", "wayland", "multi-window", "wgpu"]
